--- a/style-sheets/user-main-page.css
+++ b/style-sheets/user-main-page.css
@@ -361,9 +361,12 @@ main {
   border-radius: 10px;
 }
 
-
-
 /* Notification Page */
+
+.confirmDLTBtnColor {
+  background-color: #9e2a2b;
+  border: none;
+}
 
 .user-notification-main {
   display: block;
@@ -421,25 +424,31 @@ main {
   color: #0e2b63;
 }
 
+.reminderMessage {
+  width: 25%;
+}
+
 /* Connect Admin Style */
 
 .userMessageContent {
   background-color: #f9f7f3;
 }
+
 .message-content {
   background-color: #f9f7f3;
   color: #eaf4f4;
   left: 0;
   right: 0;
   width: 100%;
-  height: 16rem;
+  height: 4rem;
   overflow-y: auto;
 }
 
 .msgContentPlace {
   position: absolute;
   height: 50px;
-  width: 50rem;
+  width: 30rem;
+  display: flex;
   overflow-y: scroll;
   overflow-x: hidden;
   left: 5px;
@@ -447,6 +456,11 @@ main {
   border-radius: 15px;
   border-style: solid;
   box-sizing: border-box;
+}
+
+#messages {
+  text-align: end;
+  width: 100%;
 }
 
 #msgBtn {
@@ -498,6 +512,16 @@ main {
   margin-top: 10px;
 }
 
+.adminConnectListHeader {
+  font-size: large;
+  background-color: #0e2b63;
+  color: #eaf4f4;
+}
+
+.list-group-item:hover {
+  cursor: pointer;
+  background-color: #8cbbad !important;
+}
 /* Admin-Dashboard Page */
 .admin-dashboard-card1 {
   background-color: #0e2b63;
@@ -742,6 +766,7 @@ tr {
   border-radius: 10px;
   border: #9e2a2b;
 }
+
 /* Mobile Version */
 @media (max-width: 786px) {
   .sidebar {
@@ -761,9 +786,23 @@ tr {
     padding: 6rem 2rem 2rem 6rem;
     transition: all 0.4s ease-in-out;
   }
+
+  .msgContentPlace {
+    width: max-content;
+  }
+
+  .adminCardFlex {
+    flex-direction: column;
+  }
+
+  .bx-search {
+    display: none;
+  }
+
+  #user-search {
+    display: none;
+  }
 }
-
-
 
 .spinner {
   border: 4px solid rgba(0, 0, 0, 0.1);
